Fix color contrast of dev stage tracker

--- a/docs/src/css/sass/component-page.scss
+++ b/docs/src/css/sass/component-page.scss
@@ -171,7 +171,7 @@
       &.current-development-stage {
         dt {
           background-color: var(--secondary-color, #FF8000);
-          color: white;
+          color: #000;
         }
         font-weight: 700;
       }
